# zonewm

./: Cargo.toml  README.md
src/: actions.rs  commands.rs  config.rs  debug.rs  hooks.rs  lib.rs  main.rs  models.rs  overlay.rs  state.rs  test_utils.rs  tray.rs
src/actions/: hooks.rs  keymap.rs
src/commands/: cloak.rs  window.rs
src/config/: default.rs  keymap.rs  layout.rs
src/models/: monitor.rs  system.rs  window.rs  zone.rs
src/overlay/: flash.rs  focus.rs
src/state/: monitor_state.rs  window_state.rs  workspace.rs
