[package]
name = "zonewm"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-core = "0.58"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "UI_ViewManagement",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
ctrlc = "3.5.2"
dirs = "6.0.0"
tray-icon = "0.24.1"
thiserror = "2.0.18"
